# MediQuery

./: .gitignore  README.md  pyproject.toml
backend/: cache.py  chunker.py  hallucination.py  ingest_labs.py  ingest_mimic.py  models.py  prompts.py  rag_server.py  retriever.py  router.py
frontend/: index.html  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/chat/: Composer.tsx  MessageBubble.tsx  Welcome.tsx
frontend/src/lib/: chatTypes.ts  theme.tsx
frontend/src/pages/: Index.tsx
