[project]
name = "mediquery"
version = "1.0.0"
description = "MediQuery — Production-grade clinical RAG decision support with cost-aware dual-model inference (Gemma 4 26B + Llama 3.1 8B)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Modal serverless platform
    "modal>=1.4.2",
    "pydantic>=2.13.3",

    # Vector store
    "qdrant-client>=1.7.0",

    # Retrieval
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",

    # Deduplication
    "datasketch>=1.6.0",

    # Caching
    "redis>=5.0.0",

    # Document parsing
    "pymupdf>=1.24.0",

    # NLP
    "torch>=2.1.0",
    "transformers>=4.44.0",

    # Inference (vLLM installed inside Modal image, not locally)
    # "vllm>=0.6.0",
]
